Upgrade Bach to latest 17-ea and enable preview features